# CosmiC

./: .gitignore  Cargo.toml  README.md  nx.json  package.json
app/: app.json  cesconfig.json  package.json
apps/dashboard/: vite.config.ts
apps/dashboard/src/app/: app.tsx
apps/server/: project.json
daemon/: Cargo.toml
daemon/migrations/: 0001_create_user.sql  0002_create_project.sql  0003_create_apps.sql  0004_create_deployment_jobs.sql
daemon/src/: main.rs  state.rs
daemon/src/controllers/: authController.rs  check_setup.rs  login.rs  logout.rs  me.rs  mod.rs  setup_admin.rs  userController.rs
daemon/src/controllers/projects/: create_project.rs  delete_project.rs  get_apps.rs  get_projects.rs  mod.rs  update_project.rs
daemon/src/controllers/users/: create_user.rs  get_users.rs
daemon/src/extra/: hash_password.rs
daemon/src/middlewares/: auth_middleware.rs
daemon/src/routes/: auth.rs  mod.rs  project.rs  users.rs  ws.rs
daemon/src/services/: mod.rs
daemon/src/services/docker/: init.rs  list_containers.rs  list_images.rs  mod.rs
daemon/src/utils/: createJwt.rs  decode_jwt.rs  mod.rs  queue.rs  types.rs
daemon/src/ws/: mod.rs  stats.rs  terminal.rs
dashboard/: index.html  package.json  vite.config.ts
dashboard/src/: App.tsx  Layout.tsx  global.css  main.tsx
dashboard/src/components/: AnimatedLogo.tsx  CreateProject.tsx  CreateUserModal.tsx  EditProjectModal.tsx  Loading.tsx  Sidebar.tsx
dashboard/src/contants/: appDetails.ts
dashboard/src/context/: GlobalContext.tsx  SetupContext.tsx  authContext.tsx
dashboard/src/pages/: Home.tsx  Login.tsx  Project.tsx  Projects.tsx  Setup.tsx  Terminal.tsx  Users.tsx
scripts/: build.sh  recreateDb.sh
src/: main.rs
web/: index.html
web/src/: App.tsx
