[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "tls-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
log = "0.4"
env_logger = "0.11.8"
bollard = "0.19.0"
axum = { version = "0.8.4", features = ["macros", "ws"] }
chrono = "0.4.41"
uuid = { version = "1.17.0", features = ["v4"] }
argon2 = "0.5.3"
hyper = { version = "1.6.0", features = ["full"] }
rand_core = "0.9.3"
rand = "0.9.1"
bcrypt = "0.17.0"
tower-http = { version = "0.6.4", features = ["cors", "fs", "trace"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "tracing-log"] }
time = "0.3.41"
jsonwebtoken = "9.3.1"
tower-cookies = "0.11.0"
sysinfo = { version = "0.35.1", features = ["disk"] }
